<resources>
    <string name="app_name">Front Office</string>
    <string name="home">Home</string>
    <string name="list_room">Room</string>
    <string name="menu_room">Ruangan</string>
    <string name="menu_fnb">FnB</string>
    <string name="checkin_room">Checkin</string>
    <string name="bayar_room">Bayar</string>
    <string name="checkout_room">Checkout</string>
    <string name="clean_room">Clean</string>
    <string name="extend_room">Extend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="all_room_label">All</string>
    <string name="ready_room_label">Ready</string>
    <string name="checkout_room_label">Checkout</string>
    <string name="search">Cari</string>
    <string name="jam">00:00</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="anak">Anak</string>
    <string name="dewasa">Dewasa</string>
    <string name="remaja">Remaja</string>
    <string name="mf_50">Usia > 50</string>
    <string name="detail_pengunjung">Detail Pengunjung</string>
    <string name="identitas_pengunjung">Identitas Pengunjung</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_0">0</string>
    <string name="reservasi">Reservasi</string>
    <string name="kode_reservasi">Kode Reservasi</string>
    <string name="member">Member</string>
    <string name="kode_member">Kode Member</string>
    <string name="scan">Scan</string>
    <string name="jumlah_jam">Durasi Jam</string>
    <string name="jumlah_menit">Durasi Menit</string>
    <string name="durasi">Durasi</string>
    <string name="overpack_pengunjung">Overpack Pengunjung</string>
    <string name="jumlah">Jumlah</string>
    <string name="promo">Promo</string>
    <string name="voucher">Voucher</string>
    <string name="uang_muka">Uang Muka</string>
    <string name="uang_muka_">Uang Muka (-)</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="cash">Cash</string>
    <string name="debet">Debet</string>
    <string name="credit">Credit</string>
    <string name="nominal">Nominal</string>
    <string name="keterangan">Keterangan</string>
    <string name="event_acara">Acara</string>
    <string name="kode_voucher">Kode Voucher</string>
    <string name="extends_room">Extends Room</string>
    <string name="_031a">031A</string>
    <string name="nama_promo">NAMA PROMO</string>
    <string name="berlaku_jam">Berlaku jam</string>
    <string name="_50">50%</string>
    <string name="minus">-</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="pilih">pilih</string>
    <string name="promo_room">Promo Room</string>
    <string name="promo_food">Promo Food</string>
    <string name="hapus">Hapus</string>
    <string name="valid">Valid</string>
    <string name="edc_mesin">EDC Mesin</string>
    <string name="nomor_kartu">Nomor Kartu</string>
    <string name="kode_approval">Kode Approval</string>
    <string name="expire_date">Expire Date</string>
    <string name="input">Input</string>
    <string name="type_card">Tipe Kartu</string>
    <string name="non">Non</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="http_baseurl">http://{baseURL}</string>
    <string name="konfigurasi_server">KONFIGURASI SERVER</string>
    <string name="scan_qr_setting">Scan QR Setting</string>
    <string name="simpan">Simpan</string>
    <string name="durasi_extends">Durasi Extends</string>
    <string name="extend">Extend</string>
    <string name="history_checkin">History Checkin</string>
    <string name="bayar"> Pembayaran</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="total_">Total</string>
    <string name="total_bayar_rp">Total Bayar : Rp </string>
    <string name="tagihan_ruangan">Tagihan Ruangan</string>
    <string name="tagihan_penjualan">Tagihan Penjualan</string>
    <string name="small_102">SMALL 102</string>
    <string name="payment_credit_card">Credit Card</string>
    <string name="payment_debet_card">Debet Card</string>
    <string name="payment_piutang">Piutang</string>
    <string name="payment_complimentary">Complimentary</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_smart_card">Smart Card</string>
    <string name="payment_poin_member">Poin Member</string>
    <string name="payment_emoney">E-money</string>
    <string name="emoney_dana">DANA</string>
    <string name="emoney_ovo">OVO</string>
    <string name="emoney_gopay">GOPAY</string>
    <string name="payment_instruksi_penanggung_jawab">Instruksi/Penanggung Jawab</string>
    <string name="payment_nama_instansi">Nama Instansi</string>
    <string name="paymeny_piutang_advanced">Advanced</string>
    <string name="payment_piutang_konsumen_terdaftar">Konsumen Terdaftar</string>
    <string name="payment_piutang_outlet">Outlet</string>
    <string name="payment_piutang_pemegang_saham_waralaba">Pemegang Saham Waralaba</string>
    <string name="payment_piutang_pemegang_saham_outlet">Pemegang Saham Outlet</string>
    <string name="payment_piutang_id_member">ID Member</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="agrement">Agrement</string>
    <string name="kode_referensi_transaksi">Kode Referensi Transaksi</string>
    <string name="keterangan_transfer">Keterangan Transfer</string>
    <string name="room_transfer">Room Transfer</string>
    <string name="pilih_room_transfer">Pilih Room Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="order">Order</string>
    <string name="room_belum_dibayar">Room Belum Dibayar</string>
    <string name="count_total_pengunjung">Total Pengunjung 10 Overpack 3</string>
    <string name="history_extend_room">History Extend Room</string>
    <string name="anak_remaja_dewasa_tua">Anak|Remaja|Dewasa|Tua</string>
    <string name="transfer_room">Transfer Room</string>
    <string name="order_fnb">Order FnB</string>
    <string name="cancel_order_fnb">Cancel Order FnB</string>
    <string name="order_progress">Order Progress</string>
    <string name="detail_order">Detail</string>
    <string name="anda_belum_melakukan_transaksi_ini">Anda belum melakukan transaksi ini</string>
    <string name="ruangan">Ruangan</string>
    <string name="extend_ruangan">Extend Ruangan</string>
    <string name="rp10_000">Rp10.000</string>
    <string name="rp0">Rp</string>
    <string name="nominal1">1.000</string>
    <string name="nominal2">10.000</string>
    <string name="nominal3">120.000</string>
    <string name="surcharge">Surcharge</string>
    <string name="overpack">Overpack</string>
    <string name="total_room">Total Ruangan</string>
    <string name="total_fnb">Total FnB</string>
    <string name="rp10_000_000">Rp1.000.000.000</string>
    <string name="service">Service</string>
    <string name="service_">SC (+)</string>
    <string name="pajak">Pajak</string>
    <string name="pajak_">Pajak (+)</string>
    <string name="jumlah_total">Jumlah Total</string>
    <string name="transfer_ruangan">Transfer Ruangan</string>
    <string name="gift">Gift</string>
    <string name="voucher_ruangan">Voucher</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="checkout">Checkout</string>
    <string name="cleaning">Clean</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="paid">Paid</string>
    <string name="paid_capital">PAID</string>
    <string name="room">Room</string>
    <string name="jam_checkout">Jam Checkout</string>
    <string name="submit">Submit</string>
    <string name="submit_pembayaran">Bayar</string>
    <string name="cek">Cek</string>
    <string name="checksound">Checksound</string>
    <string name="checkin_room_inventory">CHECKIN ROOM</string>
    <string name="check_order_fnb">Check Order FnB</string>
    <string name="menu_tllbr_refresh">Refresh</string>
    <string name="menu_tllbr_notify">Notifikasi</string>
    <string name="cancel">Cancel</string>
    <string name="deliv_order">DO</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="kode_inventory_slip_order">Kode Inventory | Slip Order</string>
    <string name="kode_inventory_order_penjualan">Kode Inventory | Order Penjualan</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="input_jumlah_cancel_order">Input Jumlah Cancel Order</string>
    <string name="input_jumlah_do_order">Input Jumlah DO Order</string>
    <string name="password">Password</string>
    <string name="konfigurasi">Konfigurasi</string>
    <string name="login">Login</string>
    <string name="notification">Notification</string>
    <string name="refresh">Refresh</string>
    <string name="laporan">Laporan</string>
    <string name="monitor">Status</string>
    <string name="history">Histori</string>
    <string name="operasional">Operation</string>
    <string name="jumlah_semua_room">Jumlah Semua Room</string>
    <string name="_5">5</string>
    <string name="operasional_checkin">CHECKIN</string>
    <string name="operasional_fnb">FNB</string>
    <string name="operasional_bayar">BAYAR</string>
    <string name="operasional_checkout">CHECKOUT</string>
    <string name="operasional_clean">CLEAN</string>
    <string name="operasional_reservasi">RESERVASI</string>
    <string name="operasional_extend">EXTEND</string>
    <string name="operasional_transfer">TRANSFER</string>
    <string name="tersedia_7">TERSEDIA 7</string>
    <string name="available_room">Available Room</string>
    <string name="pilih_kamar">Pilih Kamar</string>
    <string name="durasi_checkin">Durasi Jam Checkin</string>
    <string name="langsung">Langsung</string>
    <string name="type_kamar_checkin">Type Kamar Checkin</string>
    <string name="kode_kamar">Kode Kamar Checkin</string>
    <string name="durasi_checkin_full">Durasi Checkin</string>
    <string name="proses_checkin_sudah_berhasil">Lengkapi Informasi Checkin</string>
    <string name="lengkapi_data_checkin">Lengkapi Data Checkin</string>
    <string name="chekcin_room">Chekcin Room</string>
    <string name="_202">202</string>
    <string name="jupiter_venus">Jupiter Venus</string>
    <string name="x">x</string>
    <string name="_10">(10</string>
    <string name="rp10000">Rp10000)</string>
    <string name="disc">Disc</string>
    <string name="f_amp_b">F&amp;B</string>
    <string name="um_transfer">Transfer</string>
    <string name="bank_name">Bank</string>
    <string name="nama_penyetor">Nama Penyetor</string>
    <string name="report">Laporan</string>
</resources>