<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navOperasionalFragment"
        android:checkable="true"
        android:icon="@drawable/ic_operasional"
        android:title="@string/operasional"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/navRoomStatusFragment"
        android:checkable="true"
        android:icon="@drawable/ic_room"
        android:title="@string/monitor"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navListHistoryRoomFragment"
        android:checkable="true"
        android:icon="@drawable/ic_report"
        android:title="@string/history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navListInventoryFragment"
        android:checkable="true"
        android:icon="@drawable/ic_fnb"
        android:title="@string/f_amp_b"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navReportingFragment"
        android:checkable="true"
        android:icon="@drawable/ic_notes"
        android:title="@string/report"
        android:enabled="true"
        app:showAsAction="ifRoom" />

</menu>