<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_member_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fnb_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/app_name"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fnb_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/_10"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnb_name" />

    <TextView
        android:id="@+id/fnb_disc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/disc"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnb_qty" />


    <TextView
        android:id="@+id/fnb_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/x"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/fnb_qty"
        app:layout_constraintTop_toBottomOf="@+id/fnb_name" />

    <TextView
        android:id="@+id/fnb_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/rp10000"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/fnb_x"
        app:layout_constraintTop_toBottomOf="@+id/fnb_name" />

    <TextView
        android:id="@+id/fnb_diskon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/rp10_000"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fnb_disc_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fnb_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:padding="2dp"
        android:text="@string/rp10_000"
        android:textColor="@color/dark_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/fnb_name"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>





