<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <RadioGroup
        android:id="@+id/input_checkin_type_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        android:checkedButton="@id/um_non"
        >

        <RadioButton
            android:id="@+id/um_non"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/non"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/um_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/um_debet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debet" />

        <RadioButton
            android:id="@+id/um_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit" />

        <RadioButton
            android:id="@+id/um_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/um_transfer" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/checkin_input_dp_nominal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/RoundedInputText"
        app:endIconDrawable="@drawable/ic_voucher"
        android:hint="@string/nominal"
        app:endIconMode="custom"
        app:endIconTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_checkin_type_dp"
        android:visibility="gone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="18sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/view_debet_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/checkin_input_dp_nominal"
        tools:layout_editor_absoluteX="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="15dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_choose_edc"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pilih"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_edc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edc_mesin"
                android:textSize="15sp"
                android:textColor="@color/dark_primary_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_choose_edc"
                app:layout_constraintTop_toTopOf="parent">


            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="15dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bttnChooseCard"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pilih"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/type_card"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bttnChooseCard"
                app:layout_constraintTop_toTopOf="parent">


            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNamaUmDebetCredit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/dark_primary_text"
            app:boxBackgroundColor="@color/dark_secondary_color"
            android:hint="@string/nama"
            app:endIconMode="custom"
            app:shapeAppearance="@style/RoundedInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/dark_primary_text"
                android:textColor="@color/dark_primary_text"
                android:inputType="text"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCardNumberUmDebetCredit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor_kartu"
            app:hintTextColor="@color/dark_primary_text"
            app:boxBackgroundColor="@color/dark_secondary_color"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimaryDark"

            app:shapeAppearance="@style/RoundedInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18sp"
                android:maxLength="4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputApprovalNumberUmDebetCredit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kode_approval"
            app:hintTextColor="@color/dark_primary_text"
            app:boxBackgroundColor="@color/dark_secondary_color"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimaryDark"

            app:shapeAppearance="@style/RoundedInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="18sp"
                android:maxLength="6"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="15dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bttn_choose_date_dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/input"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_expired_date_dp_debet_credit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/expire_date"
                app:endIconMode="custom"
                app:endIconTint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:hintTextColor="@color/dark_primary_text"
                app:boxBackgroundColor="@color/dark_secondary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bttn_choose_date_dp"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/RoundedInputText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:textSize="18sp"/>

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/checkin_input_dp_nominal"
        tools:layout_editor_absoluteX="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bank_account_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_penyetor"
            app:endIconDrawable="@drawable/ic_voucher"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimaryDark"
            app:shapeAppearance="@style/RoundedInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_bank_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_name"
            app:endIconDrawable="@drawable/ic_voucher"
            app:endIconMode="custom"
            app:endIconTint="@color/colorPrimaryDark"

            app:shapeAppearance="@style/RoundedInputText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
